<resources>
    <string name="menu_refresh">Actualizar</string>
    <string name="epua">EP\nUA</string>
    <string name="title_activity_parques">Parques UA</string>
    <string name="bt_ementas">bt_ementas</string>
    <string name="bt_parques">bt_parques</string>
    <string name="tv_ementas">Ementas</string>
    <string name="tv_parques">Parques</string>
    <string name="tv_local">Local</string>
    <string name="tv_parque">P#</string>
    <string name="tv_livres">Livres</string>
    <string name="tv_sopa">Sopa</string>
    <string name="tv_prato">Prato</string>
    <string name="tv_carne">Prato carne</string>
    <string name="tv_peixe">Prato peixe</string>
    <string name="tv_dieta">Prato dieta</string>
    <string name="tv_veget">Prato vegetariano</string>
    <string name="tv_opcao">Opção</string>
    <string name="tv_salada">Salada</string>
    <string name="tv_diversos">Diversos</string>
    <string name="tv_sobremesa">Sobremesa</string>
    <string name="tv_distancia">Km</string>
    <string name="iv_status">status</string>
    <string name="iv_logo">logo</string>
    <string name="menu_timeout">Arranque</string>
    <string name="progress">Arranque automático em \u0020</string>
    <string name="santiago">SANTIAGO</string>
    <string name="crasto">CRASTO</string>
    <string name="snackBar">SNACK-BAR</string>
    <string name="estga">ESTGA</string>
    <string name="esan">ESAN</string>
    <string name="restUniv">RESTAURANTE UNIVERSITARIO</string>
    <string name="pickCanteen">Escolha a cantina:</string>
    <string name="sb_updateSucess">Actualização efectuada com sucesso!</string>
    <string name="sb_bootTime">Tempo de arranque alterado com sucesso!</string>
    <string name="t_permission">Permissão negada!.</string>
    <string name="nd">Não disponível</string>
    <string name="encerrado">Encerrado</string>
    <string name="picker_title">Defina o tempo (segundos):</string>
    <string name="picker_msg">Escolha um número:</string>
    <string name="gps_title">Localização Desligada!</string>
    <string name="gps_msg">Activar?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
</resources>
