<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.epua.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="256dp"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo_ua"
        android:contentDescription="@string/iv_logo"
        tools:targetApi="26" />

    <TextView
        android:id="@+id/tvapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/epua"
        android:text="@string/epua"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp">

        <ImageButton
            android:id="@+id/bt1"
            android:src="@drawable/ementa"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_toStartOf="@id/sep"
            android:contentDescription="@string/bt_ementas"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/sep"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:id="@+id/bt2"
            android:src="@drawable/parque"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_toEndOf="@id/sep"
            android:contentDescription="@string/bt_parques"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/sepI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/sep"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/sep">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_ementas"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_parques"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>


    <ProgressBar
        android:id="@+id/pb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        tools:targetApi="26" />

</RelativeLayout>
